--- a/packages/ui/src/components/editor/EditPresetForm/EditPresetForm.module.scss
+++ b/packages/ui/src/components/editor/EditPresetForm/EditPresetForm.module.scss
@@ -13,6 +13,7 @@
     font-size: 12px;
     text-transform: uppercase;
     color: var(--vscode-descriptionForeground);
+    align-self: flex-start;
   }
 
   &__info {
