--- a/packages/ui/src/components/editor/EditView/EditView.module.scss
+++ b/packages/ui/src/components/editor/EditView/EditView.module.scss
@@ -23,5 +23,5 @@
 .content {
   flex: 1;
   overflow: auto;
-  padding: 8px 12px;
+  padding: 12px;
 }
